--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-md": "^1.12.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.0.1",
     "react-test-renderer": "^16.11.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
