--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.1.3",
     "create-react-context": "^0.3.0",
-    "mdbreact": "^4.22.0",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-md": "^1.12.3",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.0.1",
-    "react-test-renderer": "^16.11.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "immer": "^9.0.14",
+    "mdbreact": "^5.2.0",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.1.0",
+    "react-md": "^5.1.3",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^18.1.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,9 +38,9 @@
     ]
   },
   "devDependencies": {
-    "husky": "^3.0.9",
-    "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "husky": "^8.0.1",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3"
   },
   "husky": {
     "hooks": {
