--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "node-fetch": "^3.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
