--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "create-react-context": "^0.3.0",
+    "hasky": "^3.0.2",
     "immer": "^9.0.14",
     "mdbreact": "^5.2.0",
+    "node-fetch": "^3.2.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dev-utils": "^12.0.1",
@@ -17,8 +19,7 @@
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.1.0",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "node-fetch": "^3.2.4"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
