removed out put

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "echo `[Husky] pre-commit`, && pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged"
     }
   }
 }
